public class Constant
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";
    public const string ANIM_VICTORY = "victory";

    public const string TAG_CHARACTER = "Character";
    public const string TAG_BOT = "Bot";
    public const string TAG_BLOCK = "Block";
    public const string TAG_PLAYER = "Player";
    public const string TAG_BULLET = "Bullet";
    public const string TAG_ZONE = "Zone";
    public const string PLAYER_NAME_DEFAULT = "You";
    public const string TAG_CUP = "Cup";

    public static string SOUND_BUTTON = "SoundButton";
    public static string SOUND_WIN = "SoundWin";
    public static string SOUND_LOSE = "SoundLose";
    public static string SOUND_THROW = "SoundThrow";
    public static string SOUND_COLLIDE = "SoundCollide";
    public static string SOUND_CICK = "SoundClick";
    public static string SOUND_SIZE_UP = "SoundSizeUp";

}
